--- a/client/src/index.css
+++ b/client/src/index.css
@@ -114,6 +114,12 @@
 }
 
 
-
+.ForgotPassword{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ height: 55vh;
+ flex-direction:  column;
+}
 
 
